--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,15 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:typeface">sans</item>
+        <item name="colorControlHighlight">@color/colorBlueMedium</item>
+
+        <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
+        <item name="android:spinnerDropDownItemStyle">@style/spinnerDropDownItemStyle</item>
     </style>
 
     <style name="SplashTheme" parent="AppTheme.NoActionBar">
@@ -11,5 +19,89 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="customTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">@color/colorBlueLight</item>
+        <item name="tabTextAppearance">@style/customTextAppearance</item>
+    </style>
+
+    <style name="customTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="Dialog.FullScreen" parent="Theme.AppCompat.Dialog">
+        <item name="android:padding">0dp</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
+    <style name="spinnerItemStyle">
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="spinnerDropDownItemStyle">
+        <item name="android:gravity">center</item>
+    </style>
+
+    //Main EditText style
+
+    <style name="customEditText_16">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/common_edit_text_height</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:inputType">textCapWords</item>
+        <item name="android:textColor">@color/colorTextMain</item>
+        <item name="android:textColorHint">@color/colorTextHint</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textSize">@dimen/text_16</item>
+    </style>
+
+    <style name="customTextView_16">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/button_or_view_common_height</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">@dimen/text_16</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorBlueMedium</item>
+    </style>
+
+    <style name="customTextView_12" parent="customTextView_16">
+        <item name="android:textSize">@dimen/text_12</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/colorTextMain</item>
+    </style>
+
+    <style name="customTextView_16_Normal" parent="customTextView_16">
+        <item name="android:textSize">@dimen/text_16</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/colorTextMain</item>
+    </style>
+
+    <style name="customTextView_24" parent="customTextView_16">
+        <item name="android:textSize">@dimen/text_24</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
+    <style name="customButton_16">
+        <item name="android:layout_width">@dimen/button_or_view_common_width</item>
+        <item name="android:layout_height">@dimen/button_or_view_common_height</item>
+        <item name="android:background">@drawable/button_background_blue</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:paddingLeft">@dimen/v8</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingRight">@dimen/v8</item>
+        <item name="android:textSize">@dimen/text_16</item>
+    </style>
+
+    <style name="customHorizontalLine">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/colorBlack</item>
     </style>
 </resources>
