--- a/app/src/main/res/layout/activity_add_me_to_sgks.xml
+++ b/app/src/main/res/layout/activity_add_me_to_sgks.xml
@@ -1,66 +1,177 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:animateLayoutChanges="true"
+    android:scrollbars="none"
+    android:fillViewport="true"
     tools:mContext="com.woxi.miscellaneous.AddMeToSgksActivity">
-
-    <EditText
-        android:id="@+id/etName"
-        style="@style/customEditText_16"
-        android:layout_marginBottom="@dimen/v8"
-        android:hint="Enter Full Name"
-        android:inputType="textPersonName"
-        android:paddingLeft="@dimen/v4"
-        android:textColor="@color/colorBlack" />
-
-    <EditText
-        android:id="@+id/etContact"
-        style="@style/customEditText_16"
-        android:layout_marginBottom="@dimen/v8"
-        android:hint="Contact Number"
-        android:inputType="phone"
-        android:paddingLeft="@dimen/v8"
-        android:textColor="@color/colorBlack" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/v40"
-        android:layout_marginBottom="@dimen/v8"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:descendantFocusability="blocksDescendants">
 
-        <TextView
-            style="@style/customTextView_16_Normal"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingStart="@dimen/v8"
-            android:text="Select Area : "
+        <EditText
+            android:id="@+id/etFirstName"
+            style="@style/customEditText_16"
+            android:layout_marginBottom="@dimen/v8"
+            android:hint="@string/enter_first_name"
+            android:inputType="textPersonName"
+            android:paddingLeft="@dimen/v4"
             android:textColor="@color/colorBlack" />
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/edit_text_border">
+        <EditText
+            android:id="@+id/etMiddleName"
+            style="@style/customEditText_16"
+            android:layout_marginBottom="@dimen/v8"
+            android:hint="@string/enter_middle_name"
+            android:inputType="textPersonName"
+            android:paddingLeft="@dimen/v4"
+            android:textColor="@color/colorBlack" />
 
-            <Spinner
-                android:id="@+id/spArea"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </RelativeLayout>
+        <EditText
+            android:id="@+id/etLastName"
+            style="@style/customEditText_16"
+            android:layout_marginBottom="@dimen/v8"
+            android:hint="@string/enter_last_name"
+            android:inputType="textPersonName"
+            android:paddingLeft="@dimen/v4"
+            android:textColor="@color/colorBlack" />
+
+        <EditText
+            android:id="@+id/etContact"
+            style="@style/customEditText_16"
+            android:layout_marginBottom="@dimen/v8"
+            android:hint="@string/enter_contactNumber"
+            android:inputType="phone"
+            android:paddingLeft="@dimen/v8"
+            android:textColor="@color/colorBlack" />
+
+        <EditText
+            android:id="@+id/etEmail"
+            style="@style/customEditText_16"
+            android:layout_marginBottom="@dimen/v8"
+            android:hint="@string/enter_email"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="@dimen/v8"
+            android:textColor="@color/colorBlack" />
+
+        <LinearLayout
+            android:id="@+id/llSelectGender"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/v40"
+            android:layout_marginBottom="@dimen/v8"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvSelectGender"
+                style="@style/customTextView_16_Normal"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:paddingStart="@dimen/v8"
+                android:text="@string/select_gender"
+                android:textColor="@color/colorBlack" />
+
+            <android.support.v7.widget.AppCompatRadioButton
+                android:id="@+id/rbMale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/male"/>
+
+            <android.support.v7.widget.AppCompatRadioButton
+                android:id="@+id/rbFemale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/female"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llSelectBloodGroup"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/v40"
+            android:layout_marginBottom="@dimen/v8"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/customTextView_16_Normal"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:paddingStart="@dimen/v8"
+                android:text="@string/select_bloodGroup"
+                android:textColor="@color/colorBlack" />
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/edit_text_border">
+
+                <Spinner
+                    android:id="@+id/spBloodGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llSelectCity"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/v40"
+            android:layout_marginBottom="@dimen/v8"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/customTextView_16_Normal"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:paddingStart="@dimen/v8"
+                android:text="@string/select_city"
+                android:textColor="@color/colorBlack" />
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/edit_text_border">
+
+                <Spinner
+                    android:id="@+id/spCity"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvEnterAddress"
+            style="@style/customTextView_16_Normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/v8"
+            android:text="@string/enter_address"
+            android:textColor="@color/colorBlack" />
+
+        <EditText
+            android:id="@+id/etAddress"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@drawable/edit_text_border"/>
+
+        <TextView
+            android:id="@+id/addSgksMember"
+            style="@style/customButton_16"
+            android:layout_gravity="end"
+            android:layout_marginTop="@dimen/v16"
+            android:text="Add Me" />
+
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/addSgksMember"
-        style="@style/customButton_16"
-        android:layout_gravity="end"
-        android:layout_marginTop="@dimen/v16"
-        android:text="Add Me" />
-</LinearLayout>
+</ScrollView>
