--- a/app/src/main/res/layout/activity_add_me_to_sgks.xml
+++ b/app/src/main/res/layout/activity_add_me_to_sgks.xml
@@ -1,22 +1,22 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorWhite"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:animateLayoutChanges="true"
-    android:scrollbars="none"
-    android:fillViewport="true"
-    tools:mContext="com.woxi.miscellaneous.AddMeToSgksActivity">
+    android:layout_height="match_parent" >
     <LinearLayout
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:descendantFocusability="blocksDescendants">
+        android:descendantFocusability="blocksDescendants"
+        android:background="@color/colorWhite"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:animateLayoutChanges="true"
+        android:scrollbars="none"
+        android:fillViewport="true"
+        tools:mContext="com.woxi.miscellaneous.AddMeToSgksActivity">
 
         <EditText
             android:id="@+id/etFirstName"
@@ -42,7 +42,7 @@
             android:layout_marginBottom="@dimen/v8"
             android:hint="@string/enter_last_name"
             android:inputType="textPersonName"
-            android:paddingLeft="@dimen/v4"
+            android:paddingLeft="@dimen/v8"
             android:textColor="@color/colorBlack" />
 
         <EditText
@@ -62,6 +62,34 @@
             android:inputType="textEmailAddress"
             android:paddingLeft="@dimen/v8"
             android:textColor="@color/colorBlack" />
+
+        <LinearLayout
+            android:id="@+id/llSelectDate"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/v40"
+            android:layout_marginBottom="@dimen/v8"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tvSelectDob"
+                style="@style/customTextView_16_Normal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingStart="@dimen/v8"
+                android:text="@string/select_dateOfBirth"
+                android:textColor="@color/colorBlack" />
+            <TextView
+                android:id="@+id/tvDob"
+                style="@style/customTextView_16_Normal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:hint="dd-mm-yyyy"
+                android:textColor="@color/colorBlack"
+                android:background="@drawable/edit_text_border"/>
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/llSelectGender"
@@ -166,12 +194,12 @@
             android:layout_height="150dp"
             android:background="@drawable/edit_text_border"/>
 
+
         <TextView
             android:id="@+id/addSgksMember"
             style="@style/customButton_16"
             android:layout_gravity="end"
             android:layout_marginTop="@dimen/v16"
             android:text="Add Me" />
-
     </LinearLayout>
 </ScrollView>
