--- a/app/src/main/res/layout/activity_add_me_to_sgks.xml
+++ b/app/src/main/res/layout/activity_add_me_to_sgks.xml
@@ -7,7 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:descendantFocusability="blocksDescendants"
         android:background="@color/colorWhite"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -156,19 +155,6 @@
                     android:text="@string/female"
                     android:layout_weight="1"/>
             </RadioGroup>
-            <!--<android.support.v7.widget.AppCompatRadioButton
-                android:id="@+id/rbMale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/male"
-                android:layout_weight="0.2"/>
-
-            <android.support.v7.widget.AppCompatRadioButton
-                android:id="@+id/rbFemale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/female"
-                android:layout_weight="0.1"/>-->
         </LinearLayout>
 
         <LinearLayout
@@ -241,8 +227,9 @@
         <EditText
             android:id="@+id/etAddress"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@drawable/edit_text_border"/>
+            android:layout_height="@dimen/dimen_150dp"
+            android:background="@drawable/edit_text_border"
+            android:inputType="textMultiLine" />
 
 
         <TextView
