--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -19,12 +19,19 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context=".home.Verification">
+        <ProgressBar
+            android:id="@+id/pbVerify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
         <LinearLayout
             android:id="@+id/llEnterMobileNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_centerInParent="true">
+
             <TextView
                 style="@style/customTextView_16_Normal"
                 android:layout_width="match_parent"
