--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,7 +48,8 @@
                     android:paddingBottom="@dimen/v4"
                     android:paddingLeft="@dimen/v8"
                     android:paddingRight="@dimen/v8"
-                    android:paddingTop="@dimen/v4">
+                    android:paddingTop="@dimen/v4"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
