--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -25,12 +25,27 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tvConfirmMobileNumber"
+            style="@style/customTextView_16_Normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingStart="@dimen/v8"
+            android:paddingBottom="@dimen/v8"
+            android:textColor="@color/colorBlack"
+            android:textAlignment="center"
+            android:layout_above="@+id/llEnterOtp"
+            android:visibility="gone"/>
+
         <LinearLayout
             android:id="@+id/llEnterMobileNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_centerInParent="true">
+
 
             <TextView
                 style="@style/customTextView_16_Normal"
