--- a/app/src/main/res/layout/fragment_members_home.xml
+++ b/app/src/main/res/layout/fragment_members_home.xml
@@ -63,6 +63,7 @@
         android:background="@android:color/transparent">
 
         <ProgressBar
+            android:id="@+id/pbMemberListing"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dimen_40dp"
             android:layout_centerHorizontal="true"/>
