change in fab add member

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -102,7 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dimen_40dp"
         android:layout_marginRight="@dimen/dimen_16dp"
-        android:backgroundTint="@color/colorAddFab"
+        app:backgroundTint="@color/colorAddFab"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|right"
