--- a/app/src/main/res/layout/item_member_child.xml
+++ b/app/src/main/res/layout/item_member_child.xml
@@ -17,7 +17,7 @@
             android:layout_width="0dp"
             android:layout_weight="0.5"
             android:gravity="center_vertical"
-            android:text="SGKS Area : " />
+            android:text="SGKS City : " />
 
         <TextView
             android:id="@+id/tvMemberAddress"
