--- a/app/src/main/res/layout/fragment_account_image_zoom.xml
+++ b/app/src/main/res/layout/fragment_account_image_zoom.xml
@@ -35,12 +35,37 @@
             android:maxLines="3"
             android:padding="@dimen/v8" />
 
-        <com.woxi.sgkks_member.utils.TouchImageView
-            android:id="@+id/ivAccountImage"
+        <TextView
+            android:id="@+id/tvDescription"
+            style="@style/customTextView_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:padding="@dimen/v8" />
+            <com.woxi.sgkks_member.utils.TouchImageView
+                android:id="@+id/ivAccountImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:visibility="gone"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vpAccountImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter" />
+            android:layout_gravity="center" />
+
+        <me.relex.circleindicator.CircleIndicator
+            android:id="@+id/indicator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:minHeight="20dp"
+            app:ci_drawable_unselected="@color/colorBlueDark"
+            app:ci_margin="5dp" />
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
