--- a/app/src/main/res/layout/activity_events_detail.xml
+++ b/app/src/main/res/layout/activity_events_detail.xml
@@ -27,6 +27,16 @@
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_marginRight="@dimen/activity_vertical_margin" />
 
+    <TextView
+        android:id="@+id/tvEventVenue"
+        style="@style/customTextView_12"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/v16"
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_marginRight="@dimen/activity_vertical_margin"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvEventAndClassifiedGallery"
         android:layout_width="match_parent"
