--- a/app/src/main/res/layout/item_events_list.xml
+++ b/app/src/main/res/layout/item_events_list.xml
@@ -30,5 +30,14 @@
             android:layout_marginTop="@dimen/v4"
             android:ellipsize="end"
             android:maxLines="1" />
+
+        <TextView
+            android:id="@+id/tvEventsCity"
+            style="@style/customTextView_12"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="@dimen/v4"
+            android:ellipsize="end"
+            android:maxLines="1" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
