--- a/app/src/main/res/layout/fragment_messages_classified_home.xml
+++ b/app/src/main/res/layout/fragment_messages_classified_home.xml
@@ -26,6 +26,7 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"/>
     </RelativeLayout>
 </LinearLayout>
