--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,7 +34,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="@dimen/v16"
                     android:src="@drawable/ic_city"
-                    android:visibility="invisible"/>
+                    android:visibility="visible"/>
 
                 <ImageView
                     android:id="@+id/ivLanguage"
@@ -42,7 +42,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginEnd="@dimen/v16"
+                    android:layout_marginEnd="60dp"
                     android:src="@drawable/ic_language"
                     android:visibility="visible"/>
 
