--- a/app/src/main/res/layout/activity_select_city.xml
+++ b/app/src/main/res/layout/activity_select_city.xml
@@ -6,7 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.woxi.sgkks_member.home.SelectCityActivity"
     android:background="@color/colorAppBackground"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
     <LinearLayout
         android:id="@+id/llSearchCity"
         android:layout_width="match_parent"
