--- a/app/src/main/res/layout/fragment_messages_classified_home.xml
+++ b/app/src/main/res/layout/fragment_messages_classified_home.xml
@@ -24,6 +24,7 @@
         android:background="@android:color/transparent">
 
         <ProgressBar
+            android:id="@+id/pbMessages"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_centerHorizontal="true"
