end of list handled in Select City

--- a/app/src/main/res/layout/item_city_list.xml
+++ b/app/src/main/res/layout/item_city_list.xml
@@ -20,14 +20,33 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textAlignment="center"
-            android:text="CITY"/>
+            android:text="CITY"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
 
-        <TextView
-            android:id="@+id/cardTvMemberCount"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAlignment="center"
-            android:text="MEMBER_COUNT"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/cardTvMemberCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="MEMBER_COUNT"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/cardTvMemberCountInt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="123"
+                android:textColor="@color/colorBlueDark"
+                android:textSize="18sp"/>
+        </LinearLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
