--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -117,7 +117,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|right"
-        android:src="@drawable/ic_add_green"
-        android:visibility="gone"/>
+        android:src="@drawable/ic_add_green" />
 
 </android.support.design.widget.CoordinatorLayout>
