working on member edit

--- a/app/src/main/res/layout/activity_add_me_to_sgks.xml
+++ b/app/src/main/res/layout/activity_add_me_to_sgks.xml
@@ -242,7 +242,7 @@
         <TextView
             android:id="@+id/addSgksMember"
             style="@style/customButton_16"
-            android:layout_gravity="end"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/v16"
             android:text="Add Me" />
     </LinearLayout>
