--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -18,7 +18,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".home.Verification">
+        tools:context=".home.VerificationActivity">
         <ProgressBar
             android:id="@+id/pbVerify"
             android:layout_width="wrap_content"
