added icon to classified module

--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -97,7 +97,8 @@
                 android:layout_marginBottom="@dimen/v8"
                 android:paddingLeft="@dimen/v8"
                 android:textColor="@color/colorBlack"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:inputType="number"/>
         </LinearLayout>
     </RelativeLayout>
     <android.support.design.widget.AppBarLayout
