--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -18,7 +18,6 @@
         android:orientation="horizontal">
 
         <RadioButton
-            android:id="@+id/radioButtonSuggestion"
             style="@style/customTextView_12"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -57,7 +56,9 @@
             <Spinner
                 android:id="@+id/spinnerSelect"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                />
         </RelativeLayout>
     </LinearLayout>
 
