--- a/app/src/main/res/layout/activity_member_details.xml
+++ b/app/src/main/res/layout/activity_member_details.xml
@@ -251,6 +251,6 @@
             android:src="@drawable/ic_edit"
             app:backgroundTint="@color/colorPrimaryDark"
             app:elevation="0dp"
-            app:fabSize="mini" />
+            app:fabSize="normal" />
     </RelativeLayout>
 </ScrollView>
