suggestion box completed

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -117,6 +117,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|right"
-        android:src="@drawable/ic_add_green" />
+        android:src="@drawable/ic_add_green"
+        android:visibility="gone"/>
 
 </android.support.design.widget.CoordinatorLayout>
