--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -103,23 +103,18 @@
                 android:textAlignment="center"
                 android:visibility="gone"/>
         </LinearLayout>
-        <!--<LinearLayout-->
-            <!--android:id="@+id/llEnterOtp"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical"-->
-            <!--android:layout_centerInParent="true">z-->
-            <!--<TextView-->
-                <!--style="@style/customTextView_16_Normal"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_weight="1"-->
-                <!--android:paddingStart="@dimen/v8"-->
-                <!--android:text="@string/enter_otp"-->
-                <!--android:textColor="@color/colorBlack"-->
-                <!--android:textAlignment="center"/>-->
-            <!---->
-        <!--</LinearLayout>-->
+        <TextView
+            android:id="@+id/tvOtpSent"
+            style="@style/customTextView_16_Normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingStart="@dimen/v8"
+            android:text="@string/otp_sent"
+            android:textColor="@color/colorBlack"
+            android:textAlignment="center"
+            android:layout_below="@+id/llEnterMobileNumber"
+            android:visibility="gone"/>
     </RelativeLayout>
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
