--- a/app/src/main/res/layout/item_member_listing.xml
+++ b/app/src/main/res/layout/item_member_listing.xml
@@ -46,15 +46,17 @@
                 android:layout_marginBottom="@dimen/v4"
                 android:layout_marginTop="@dimen/v4"
                 android:maxLines="4"
-                android:textStyle="italic" />
-            <TextView
+                android:textStyle="italic"
+                android:textSize="@dimen/text_16"/>
+            <!--<TextView
                 android:id="@+id/tvMemberAddress"
                 style="@style/customTextView_12"
                 android:layout_height="wrap_content"
                 android:maxLines="2"
                 android:textStyle="italic"
                 android:ellipsize="end"
-                android:singleLine="false"/>
+                android:singleLine="false"
+                android:textSize="@dimen/text_16"/>-->
         </LinearLayout>
 
         <LinearLayout
