--- a/app/src/main/res/layout/item_message_listing.xml
+++ b/app/src/main/res/layout/item_message_listing.xml
@@ -48,7 +48,8 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@color/colorTextHintDark"
-                android:textStyle="italic" />
+                android:textStyle="italic"
+                android:textSize="@dimen/text_16"/>
 
             <TextView
                 android:id="@+id/tvNewsCreatedAt"
