--- a/app/src/main/res/layout/activity_events_detail.xml
+++ b/app/src/main/res/layout/activity_events_detail.xml
@@ -25,7 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/v16"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:layout_marginRight="@dimen/activity_vertical_margin" />
+        android:layout_marginRight="@dimen/activity_vertical_margin"
+        android:textSize="@dimen/textsize_normal_18dp"/>
 
     <TextView
         android:id="@+id/tvEventVenue"
