issues solved and app ready for release

--- a/app/src/main/res/layout/activity_select_city.xml
+++ b/app/src/main/res/layout/activity_select_city.xml
@@ -35,7 +35,9 @@
             android:background="@null"
             android:hint="Search City"
             android:imeOptions="actionDone"
-            android:paddingLeft="@dimen/v8"/>
+            android:paddingLeft="@dimen/v8"
+            android:focusable="true"
+            android:focusableInTouchMode="true"/>
 
         <ImageView
             android:id="@+id/ivSearchCity"
