database name changed

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="v40">40dp</dimen>
 
     <dimen name="text_12">12dp</dimen>
+    <dimen name="text_14">14dp</dimen>
     <dimen name="text_16">16dp</dimen>
     <dimen name="text_20">20dp</dimen>
     <dimen name="text_24">24dp</dimen>
